--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-center bg-dark">
             pile de zabutons
-            <span class="badge bg-primary rounded-pill">* 1</span>
+            <span class="badge bg-primary rounded-pill">* 2</span>
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-center bg-dark">
             kit de pâte à modeler
@@ -94,7 +94,7 @@
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-center bg-dark">
             commode blocs de bois
-            <span class="badge bg-primary rounded-pill">* 1</span>
+            <span class="badge bg-primary rounded-pill">* 2</span>
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-center bg-dark">
             bibliothèque en bois
@@ -150,6 +150,26 @@
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-center bg-dark">
             lit en bois
+            <span class="badge bg-primary rounded-pill">* 1</span>
+          </li>
+          <li class="list-group-item d-flex justify-content-between align-items-center bg-dark">
+            étagère tronc
+            <span class="badge bg-primary rounded-pill">* 1</span>
+          </li>
+          <li class="list-group-item d-flex justify-content-between align-items-center bg-dark">
+            mare galet
+            <span class="badge bg-primary rounded-pill">* 1</span>
+          </li>
+          <li class="list-group-item d-flex justify-content-between align-items-center bg-dark">
+            panier-rapas en bambou
+            <span class="badge bg-primary rounded-pill">* 1</span>
+          </li>
+          <li class="list-group-item d-flex justify-content-between align-items-center bg-dark">
+            seau en bois
+            <span class="badge bg-primary rounded-pill">* 1</span>
+          </li>
+          <li class="list-group-item d-flex justify-content-between align-items-center bg-dark">
+            lit coquillages
             <span class="badge bg-primary rounded-pill">* 1</span>
           </li>
       </ul>
