--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-center bg-dark">
             pile de zabutons
-            <span class="badge bg-primary rounded-pill">* 2</span>
+            <span class="badge bg-primary rounded-pill">* 3</span>
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-center bg-dark">
             kit de pâte à modeler
@@ -170,6 +170,30 @@
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-center bg-dark">
             lit coquillages
+            <span class="badge bg-primary rounded-pill">* 1</span>
+          </li>
+          <li class="list-group-item d-flex justify-content-between align-items-center bg-dark">
+            gazon patio
+            <span class="badge bg-primary rounded-pill">* 1</span>
+          </li>
+          <li class="list-group-item d-flex justify-content-between align-items-center bg-dark">
+            étagère en bois de fer
+            <span class="badge bg-primary rounded-pill">* 1</span>
+          </li>
+          <li class="list-group-item d-flex justify-content-between align-items-center bg-dark">
+            cheval à bascule
+            <span class="badge bg-primary rounded-pill">* 1</span>
+          </li>
+          <li class="list-group-item d-flex justify-content-between align-items-center bg-dark">
+            sol plage de sable
+            <span class="badge bg-primary rounded-pill">* 1</span>
+          </li>
+          <li class="list-group-item d-flex justify-content-between align-items-center bg-dark">
+            armoire en fer
+            <span class="badge bg-primary rounded-pill">* 1</span>
+          </li>
+          <li class="list-group-item d-flex justify-content-between align-items-center bg-dark">
+            mur bibliothèque classique
             <span class="badge bg-primary rounded-pill">* 1</span>
           </li>
       </ul>
